dnjf/bench/calc.75458.log
GPU 1 assigned to the job
SLURM_NTASKS: 1
Traceback (most recent call last):
  File "/home/jinvk/.dlfjs/DNJF/dnjf/bench/bench.py", line 10, in <module>
    from plot import scatter
  File "/home/jinvk/.dlfjs/DNJF/dnjf/bench/plot.py", line 48
    x_dft, y_dft, z_dft = np.concatenate((x_dft, dft_force[0]),axis=0), np.concatenate((y_dft, dft_force[1]), axis=1)m np.concatenate((z_dft, dft_force[2]),axis=0)
                                                                                                                     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/jinvk/.dlfjs/DNJF/dnjf/bench/bench.py", line 10, in <module>
    from plot import scatter
  File "/home/jinvk/.dlfjs/DNJF/dnjf/bench/plot.py", line 48
    x_dft, y_dft, z_dft = np.concatenate((x_dft, dft_force[0]),axis=0), np.concatenate((y_dft, dft_force[1]), axis=1)m np.concatenate((z_dft, dft_force[2]),axis=0)
                                                                                                                     ^
SyntaxError: invalid syntax
